--- a/thunderstore.toml
+++ b/thunderstore.toml
@@ -6,7 +6,7 @@ schemaVersion = "0.0.1"
 namespace = "Read-Em-And-Weep"
 name = "Flip_the_Arcana_Mod"
 versionNumber = "1.0.0"
-description = "Allows to do some super duper thing."
+description = "Adds a new set of arcana cards that you can use and upgrade."
 websiteUrl = "https://github.com/Read-Em-And-Weep/Flip_the_Arcana_Mod"
 containsNsfwContent = false
 
