--- a/thunderstore.toml
+++ b/thunderstore.toml
@@ -38,6 +38,12 @@ source = "./src"
 target = "./plugins"
 
 
+[[build.copy]]
+source = "./data"
+target = "./plugins_data"
+
+
+
 [publish]
 repository = "https://thunderstore.io"
 communities = [ "hades-ii", ]
